<resources>
    <string name="app_name">GoHipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mainscr_msg">Find professional and experienced developer for any field</string>
    <string name="log_in_engineer">Log in as Engineer</string>
    <string name="log_in_company">Log in as Company</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="input_email">Input email</string>
    <string name="input_password">Input password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_here">Register here</string>
    <string name="dont_have_an_account">Do not have an account ?</string>
    <string name="register">Register</string>
    <string name="fullname">Fullname</string>
    <string name="input_fullname">Input fullname</string>
    <string name="phone">Phone</string>
    <string name="input_phone_number">Input phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login_here">Login here</string>
    <string name="enter_email_you_have_registered_below">Enter email you have been registered before.</string>
    <string name="send_reset_password_mail">Send reset password mail</string>
    <string name="forgot_password_screen">Forgot Password</string>
    <string name="update_your_password_with_unique_characters">Update your password with unique characters.</string>
    <string name="new_password">New password</string>
    <string name="input_new_password">Input new password</string>
    <string name="reset_password">Reset Password</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="location">Fuusha Village, East Blue</string>
    <string name="job">Android Developer</string>
    <string name="name">Mugiwara Monkey D. Luffy</string>
    <string name="github">rizfa-is</string>
    <string name="gitlab">monkluff97_glab</string>
    <string name="instagram">monkdluff.official</string>
    <string name="portfolio_tab_title">Portfolio</string>
    <string name="experience_tab_title">Experience</string>
    <string name="hire_talent">Hire Talent</string>
    <string name="register_now">Register Now</string>
    <string name="select_role">Select Role</string>
    <string name="engineer">Engineer</string>
    <string name="chat_now">Chat Now</string>
    <string name="engineer_register">Engineer Register</string>
    <string name="company">Company</string>
    <string name="input_company">Input company</string>
    <string name="position">Position</string>
    <string name="input_position">Input position</string>
    <string name="junior_android_developer">Junior Android Developer</string>
    <string name="gohipe_teknologi">GoHipe Teknologi</string>
    <string name="february_2021_oktober_2022">February 2021 - Oktober 2022</string>
    <string name="total_months">20 months</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="project">Project</string>
    <string name="account">Account</string>
    <string name="issog_corp">iSSOG Corp</string>
    <string name="hiring">Hiring</string>
    <string name="on_waiting">On wait</string>
    <string name="on_progress">On progress</string>
    <string name="finished">Finished</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="field">Field</string>
    <string name="_location">Location</string>
    <string name="_description">Description</string>
    <string name="_instagram">Instagram</string>
    <string name="linkedin">LinkedIn</string>
    <string name="update_account">Update Account</string>
    <string name="_name">Name</string>
    <string name="add_project">Add project</string>
    <string name="deadline">Deadline</string>
    <string name="update_project">Update project</string>
    <string name="update_hire">Update hire</string>
    <string name="price">Price</string>
    <string name="message">Message</string>
    <string name="engineer_id">Engineer ID</string>
    <string name="hire_now">Hire now</string>
    <string name="job_title">Job title</string>
    <string name="job_type">Job type</string>
    <string name="_github">Github</string>
    <string name="_gitlab">Gitlab</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="hint_email">ex: robert@gmail.com</string>
    <string name="hint_password">ex: @tH4rbour</string>
    <string name="hint_fullname">ex: Robert Sanchez</string>
    <string name="hint_company">ex: MetaQuotes Corp.</string>
    <string name="hint_position">ex: CEO, Product Manager, etc.</string>
    <string name="hint_phone">ex: 085789123456</string>
    <string name="hint_project_name">ex: Aplikasi Jual Beli Ikan Koi</string>
    <string name="hint_hire_msg">ex: Tambahkan QR Scanner ya!</string>
    <string name="hint_hr_price">ex: 1000000</string>
    <string name="hint_deadline">ex: 2022-01-31</string>
    <string name="hint_project_desc">ex: Aplikasi android jual beli ikan koi \narea Jawa Timur</string>
    <string name="hint_field">ex: Fintech, E-commerce, Medical</string>
    <string name="hint_location">ex: Budapest, Hungary</string>
    <string name="hint_profile_desc">ex: We\'re a fintech company leading people to reach financial freedom</string>
    <string name="hint_profile_ig">ex: @metaQ_official</string>
    <string name="hint_profile_linkedin">ex: MetaQuotes Software</string>
    <string name="hint_jobtype">ex: Freelance</string>
    <string name="hint_jobtitle">ex: Android Developer</string>
    <string name="hint_profile_en_desc">ex: An android developer high-interested in programming and IT development</string>
    <string name="hint_profile_en_ig">ex: @robert_sz</string>
    <string name="hint_github">ex: github.com/mojombo</string>
    <string name="hint_gitlab">ex: gitlab.com/mojombo</string>
    <string name="hint_experi_desc">ex: Maintenance AWS server</string>
    <string name="hint_porto_link">ex: goHipe.co.id or App Store link</string>
    <string name="hint_porto_repo">ex: github.com/mojombo/koi_mark</string>
    <string name="hint_porto_apptype">ex: Mobile App</string>
</resources>