<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mn_item_maincontent_home"
        android:title="@string/home"
        android:icon="@drawable/ic_bottom_nav_home_unchecked"/>
    <item
        android:id="@+id/mn_item_maincontent_search"
        android:title="@string/search"
        android:icon="@drawable/ic_bottom_nav_search_unchecked"/>
    <item
        android:id="@+id/mn_item_maincontent_hiring"
        android:title="@string/hiring"
        android:icon="@drawable/ic_bottom_nav_hiring_unchecked"/>
    <item
        android:id="@+id/mn_item_maincontent_project"
        android:title="@string/project"
        android:icon="@drawable/ic_bottom_nav_project_unchecked"/>
    <item
        android:id="@+id/mn_item_maincontent_account"
        android:title="@string/account"
        android:icon="@drawable/ic_bottom_nav_account_unchecked"/>
</menu>