<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".maincontent.engineer.EngineerEditProfileAccountFragment">

   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingHorizontal="16dp">

         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/shapeableImageView2"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="24dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_account"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:shapeAppearance="@style/circleImage_profile" />

         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/edit_image_button_bg"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginEnd="3dp"
             android:layout_marginBottom="3dp"
             android:padding="3dp"
             android:background="@color/theme_green"
             android:scaleType="centerCrop"
             app:strokeColor="@color/white"
             app:strokeWidth="2dp"
             app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView2"
             app:layout_constraintEnd_toEndOf="@+id/shapeableImageView2"
             app:shapeAppearance="@style/circleImage_profile" />

         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/edit_image_button"
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_margin="5dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_edit"
             app:layout_constraintBottom_toBottomOf="@+id/edit_image_button_bg"
             app:layout_constraintEnd_toEndOf="@+id/edit_image_button_bg"
             app:layout_constraintStart_toStartOf="@+id/edit_image_button_bg"
             app:layout_constraintTop_toTopOf="@+id/edit_image_button_bg"
             app:shapeAppearance="@style/circleImage_profile" />

         <TextView
             android:id="@+id/tv_addex_name"
             style="@style/TextView_MaterialInput_Edit"
             android:layout_marginTop="24dp"
             android:text="@string/fullname"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/shapeableImageView2" />

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/it_addab_name"
             style="@style/MaterialField_TextInputLayout_Edit"
             android:hint="@string/hint_fullname"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_addex_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_engeditaccountfrg_fullname"
                style="@style/MaterialField_EditText_Edit" />

         </com.google.android.material.textfield.TextInputLayout>

         <TextView
             android:id="@+id/tv_engeditaccountfrg_email"
             style="@style/TextView_MaterialInput_Edit"
             android:layout_marginTop="16dp"
             android:text="@string/email"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/it_addab_name" />

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/it_engeditaccountfrg_email"
             style="@style/MaterialField_TextInputLayout_Edit"
             android:hint="@string/hint_email"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_engeditaccountfrg_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_engeditaccountfrg_email"
                style="@style/MaterialField_EditText_Edit" />

         </com.google.android.material.textfield.TextInputLayout>

         <TextView
             android:id="@+id/tv_engeditaccountfrg_jobtitle"
             style="@style/TextView_MaterialInput_Edit"
             android:layout_marginTop="16dp"
             android:text="@string/job_title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/it_engeditaccountfrg_email" />

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/it_engeditaccountfrg_jobtitle"
             style="@style/MaterialField_TextInputLayout_Edit"
             android:hint="@string/hint_jobtitle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_engeditaccountfrg_jobtitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_engeditaccountfrg_jobtitle"
                style="@style/MaterialField_EditText_Edit" />

         </com.google.android.material.textfield.TextInputLayout>

         <TextView
             android:id="@+id/tv_engeditaccountfrg_jobtype"
             style="@style/TextView_MaterialInput_Edit"
             android:layout_marginTop="16dp"
             android:text="@string/job_type"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/it_engeditaccountfrg_jobtitle" />

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/it_engeditaccountfrg_jobtype"
             style="@style/MaterialField_TextInputLayout_Edit3White"
             android:hint="@string/hint_jobtype"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_engeditaccountfrg_jobtype">

            <AutoCompleteTextView
                android:id="@+id/et_engeditaccountfrg_jobtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

         </com.google.android.material.textfield.TextInputLayout>

         <TextView
             android:id="@+id/tv_engeditaccountfrg_phone"
             style="@style/TextView_MaterialInput_Edit"
             android:layout_marginTop="16dp"
             android:text="@string/phone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/it_engeditaccountfrg_jobtype" />

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/it_engeditaccountfrg_phone"
             style="@style/MaterialField_TextInputLayout_Edit"
             android:hint="@string/hint_phone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_engeditaccountfrg_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_engeditaccountfrg_phone"
                style="@style/MaterialField_EditText_Edit"
                android:inputType="number"/>

         </com.google.android.material.textfield.TextInputLayout>

         <TextView
             android:id="@+id/tv_engeditaccountfrg_location"
             style="@style/TextView_MaterialInput_Edit"
             android:layout_marginTop="16dp"
             android:text="@string/_location"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/it_engeditaccountfrg_phone" />

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/it_engeditaccountfrg_location"
             style="@style/MaterialField_TextInputLayout_Edit"
             android:hint="@string/hint_location"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_engeditaccountfrg_location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_engeditaccountfrg_location"
                style="@style/MaterialField_EditText_Edit" />

         </com.google.android.material.textfield.TextInputLayout>

         <TextView
             android:id="@+id/tv_engeditaccountfrg_description"
             style="@style/TextView_MaterialInput_Edit"
             android:layout_marginTop="16dp"
             android:text="@string/_description"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/it_engeditaccountfrg_location" />

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/it_engeditaccountfrg_description"
             style="@style/MaterialField_TextInputLayout_Edit"
             android:hint="@string/hint_profile_en_desc"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_engeditaccountfrg_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_engeditaccountfrg_description"
                android:layout_height="100dp"
                style="@style/MaterialField_EditText_Edit" />

         </com.google.android.material.textfield.TextInputLayout>

         <TextView
             android:id="@+id/tv_engeditaccountfrg_instagram"
             style="@style/TextView_MaterialInput_Edit"
             android:layout_marginTop="16dp"
             android:text="@string/_instagram"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/it_engeditaccountfrg_description" />

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/it_engeditaccountfrg_instagram"
             style="@style/MaterialField_TextInputLayout_Edit"
             android:hint="@string/hint_profile_en_ig"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_engeditaccountfrg_instagram">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_engeditaccountfrg_instagram"
                style="@style/MaterialField_EditText_Edit" />

         </com.google.android.material.textfield.TextInputLayout>

         <TextView
             android:id="@+id/tv_engeditaccountfrg_github"
             style="@style/TextView_MaterialInput_Edit"
             android:layout_marginTop="16dp"
             android:text="@string/_github"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/it_engeditaccountfrg_instagram" />

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/it_engeditaccountfrg_github"
             style="@style/MaterialField_TextInputLayout_Edit"
             android:hint="@string/hint_github"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_engeditaccountfrg_github">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_engeditaccountfrg_github"
                style="@style/MaterialField_EditText_Edit" />

         </com.google.android.material.textfield.TextInputLayout>

         <TextView
             android:id="@+id/tv_engeditaccountfrg_gitlab"
             style="@style/TextView_MaterialInput_Edit"
             android:layout_marginTop="16dp"
             android:text="@string/_gitlab"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/it_engeditaccountfrg_github" />

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/it_engeditaccountfrg_gitlab"
             style="@style/MaterialField_TextInputLayout_Edit"
             android:hint="@string/hint_gitlab"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_engeditaccountfrg_gitlab">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_engeditaccountfrg_gitlab"
                style="@style/MaterialField_EditText_Edit" />

         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_engregisterfrg_update"
             style="@style/MaterialButton"
             android:layout_marginTop="32dp"
             android:layout_marginBottom="24dp"
             android:backgroundTint="@color/theme_orange"
             android:text="@string/update_account"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/it_engeditaccountfrg_gitlab" />

      </androidx.constraintlayout.widget.ConstraintLayout>

   </androidx.core.widget.NestedScrollView>

</layout>